desktop layout finished

--- a/src/index.html
+++ b/src/index.html
@@ -205,43 +205,57 @@
 
     </section>
 
-    <section>
-      <h1>Snap photos and share like never before</h1>
-      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h2>
+    <section class="eleventh">
+      <h1 class="eleventh__title">Snap photos and share like never before</h1>
+      <h2 class="eleventh__main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h2>
 
-      <article>
-        <div></div>
-        <h4>Sed ut perspiciatis</h4>
-        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-      </article>
-
-      <article>
-        <div></div>
-        <h4>Lorem ipsum dolor</h4>
-        <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <article class="eleventh__main">
+        <article class="eleventh__art">
+          <div class="eleventh__img"></div>
+          <article class="eleventh__inside">
+            <h4>Sed ut perspiciatis</h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+          </article>
+        </article>
+  
+        <article class="eleventh__art">
+          <div class="eleventh__img"></div>
+          <article class="eleventh__inside">
+            <h4>Lorem ipsum dolor</h4>
+            <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </article>
+        </article>
       </article>
     </section>
 
-    <section>
-      <h1>Snap photos and share like never before</h1>
-      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h2>
+    <section class="eleventh twelfth">
+      <h1 class="eleventh__title">Snap photos and share like never before</h1>
+      <h2 class="eleventh__main">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h2>
 
-      <article>
-        <div></div>
-        <h4>Sed ut perspiciatis</h4>
-        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
-      </article>
-
-      <article>
-        <div></div>
-        <h4>Lorem ipsum dolor</h4>
-        <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </article>
-
-      <article>
-        <div></div>
-        <h4>Nemo enim ipsam</h4>
-        <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+      <article class="eleventh__main">
+        <article class="eleventh__art">
+          <div class="twelfth__img"></div>
+          <article class="eleventh__inside">
+            <h4>Sed ut perspiciatis</h4>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+          </article>
+        </article>
+  
+        <article class="eleventh__art">
+          <div class="twelfth__img"></div>
+          <article class="eleventh__inside">
+            <h4>Lorem ipsum dolor</h4>
+            <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </article>
+        </article>
+  
+        <article class="eleventh__art">
+          <div class="twelfth__img"></div>
+          <article class="eleventh__inside">
+            <h4>Nemo enim ipsam</h4>
+            <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+          </article>
+        </article>
       </article>
     </section>
   </main>
