--- a/src/index.html
+++ b/src/index.html
@@ -14,22 +14,22 @@
     <section class="first grid4">
       <h1 class="grid4__title">Snap photos and share like never before</h1>
 
-      <article class="grid4__art1">
+      <article class="grid4__art1 grid4__art">
         <h4>Sed ut perspiciatis</h4>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
       </article>
 
-      <article class="grid4__art2">
+      <article class="grid4__art2 grid4__art">
         <h4>Nemo enim ipsam</h4>
         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
       </article>
 
-      <article class="grid4__art3">
+      <article class="grid4__art3 grid4__art">
         <h4>Lorem ipsum dolor</h4>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
       </article>
 
-      <article class="grid4__art4">
+      <article class="grid4__art4 grid4__art">
         <h4>Tempor incididunt</h4>
         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
       </article>
@@ -38,25 +38,25 @@
     <section class="second grid4">
       <h1 class="grid4__title">Snap photos and share like never before</h1>
 
-      <article class="grid4__art1">
+      <article class="grid4__art1 grid4__art">
         <h4>Sed ut perspiciatis</h4>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
         <a href="#" class="second__link">Learn more</a>
       </article>
 
-      <article class="grid4__art2">
+      <article class="grid4__art2 grid4__art">
         <h4>Nemo enim ipsam</h4>
         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
         <a href="#" class="second__link">Learn more</a>
       </article>
 
-      <article class="grid4__art3">
+      <article class="grid4__art3 grid4__art">
         <h4>Lorem ipsum dolor</h4>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
         <a href="#" class="second__link">Learn more</a>
       </article>
 
-      <article class="grid4__art4">
+      <article class="grid4__art4 grid4__art">
         <h4>Tempor incididunt</h4>
         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
         <a href="#" class="second__link">Learn more</a>
@@ -66,25 +66,25 @@
     <section class="third grid4">
       <h1 class="grid4__title">Snap photos and share like never before</h1>
 
-      <article class="grid4__art1">
+      <article class="grid4__art1 grid4__art">
         <h4>Sed ut perspiciatis</h4>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
         <a href="#" class="third__link link__blue">Learn more</a>
       </article>
 
-      <article class="grid4__art2">
+      <article class="grid4__art2 grid4__art">
         <h4>Nemo enim ipsam</h4>
         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
         <a href="#" class="third__link link__blue">Learn more</a>
       </article>
 
-      <article class="grid4__art3">
+      <article class="grid4__art3 grid4__art">
         <h4>Lorem ipsum dolor</h4>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
         <a href="#" class="third__link link__blue">Learn more</a>
       </article>
 
-      <article class="grid4__art4">
+      <article class="grid4__art4 grid4__art">
         <h4>Tempor incididunt</h4>
         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
         <a href="#" class="third__link link__blue">Learn more</a>
