--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Snap and share photos.">
     <title>TT</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,22 +16,22 @@
       <h1 class="grid4__title">Snap photos and share like never before</h1>
 
       <article class="grid4__art1 grid4__art">
-        <h4>Sed ut perspiciatis</h4>
+        <h3>Sed ut perspiciatis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
       </article>
 
       <article class="grid4__art2 grid4__art">
-        <h4>Nemo enim ipsam</h4>
+        <h3>Nemo enim ipsam</h3>
         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
       </article>
 
       <article class="grid4__art3 grid4__art">
-        <h4>Lorem ipsum dolor</h4>
+        <h3>Lorem ipsum dolor</h3>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
       </article>
 
       <article class="grid4__art4 grid4__art">
-        <h4>Tempor incididunt</h4>
+        <h3>Tempor incididunt</h3>
         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
       </article>
     </section>
@@ -39,27 +40,27 @@
       <h1 class="grid4__title">Snap photos and share like never before</h1>
 
       <article class="grid4__art1 grid4__art">
-        <h4>Sed ut perspiciatis</h4>
+        <h3>Sed ut perspiciatis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
-        <a href="#" class="second__link">Learn more</a>
+        <a href="#" class="second__link" title="Learn more about our services">Learn more</a>
       </article>
 
       <article class="grid4__art2 grid4__art">
-        <h4>Nemo enim ipsam</h4>
+        <h3>Nemo enim ipsam</h3>
         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
-        <a href="#" class="second__link">Learn more</a>
+        <a href="#" class="second__link" title="Explore additional information">Learn more</a>
       </article>
 
       <article class="grid4__art3 grid4__art">
-        <h4>Lorem ipsum dolor</h4>
+        <h3>Lorem ipsum dolor</h3>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
-        <a href="#" class="second__link">Learn more</a>
+        <a href="#" class="second__link" title="Learn more about our services">Learn more</a>
       </article>
 
       <article class="grid4__art4 grid4__art">
-        <h4>Tempor incididunt</h4>
+        <h3>Tempor incididunt</h3>
         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
-        <a href="#" class="second__link">Learn more</a>
+        <a href="#" class="second__link" title="Explore additional information">Learn more</a>
       </article>
     </section>
 
@@ -67,27 +68,27 @@
       <h1 class="grid4__title">Snap photos and share like never before</h1>
 
       <article class="grid4__art1 grid4__art">
-        <h4>Sed ut perspiciatis</h4>
+        <h3>Sed ut perspiciatis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
-        <a href="#" class="third__link link__blue">Learn more</a>
+        <a href="#" class="third__link link__blue" title="Learn more about our services">Learn more</a>
       </article>
 
       <article class="grid4__art2 grid4__art">
-        <h4>Nemo enim ipsam</h4>
+        <h3>Nemo enim ipsam</h3>
         <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam.</p>
-        <a href="#" class="third__link link__blue">Learn more</a>
+        <a href="#" class="third__link link__blue" title="Learn more about our services">Learn more</a>
       </article>
 
       <article class="grid4__art3 grid4__art">
-        <h4>Lorem ipsum dolor</h4>
+        <h3>Lorem ipsum dolor</h3>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
-        <a href="#" class="third__link link__blue">Learn more</a>
+        <a href="#" class="third__link link__blue" title="Explore additional information">Learn more</a>
       </article>
 
       <article class="grid4__art4 grid4__art">
-        <h4>Tempor incididunt</h4>
+        <h3>Tempor incididunt</h3>
         <p>Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
-        <a href="#" class="third__link link__blue">Learn more</a>
+        <a href="#" class="third__link link__blue" title="Explore additional information">Learn more</a>
       </article>
     </section>
 
@@ -134,9 +135,9 @@
           />
         </svg>
         </div>
-        <h4>Sed ut perspiciatis</h4>
+        <h3>Sed ut perspiciatis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
-        <a href="#" class="link__blue">Learn more</a>
+        <a href="#" class="link__blue" title="Learn more about our services">Learn more</a>
       </article>
 
       <article class="grid2__art2">
@@ -179,9 +180,9 @@
         />
       </svg>
         </div>
-        <h4>Lorem ipsum dolor</h4>
+        <h3>Lorem ipsum dolor</h3>
         <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
-        <a href="#" class="link__blue">Learn more</a>
+        <a href="#" class="link__blue" title="Explore additional information">Learn more</a>
       </article>
     </section>
 
@@ -220,14 +221,14 @@
       </svg>
       </div>
       <article class="fifth__art flex__art">
-        <h4>Sed ut perspiciatis unde omnis</h4>
+        <h3>Sed ut perspiciatis unde omnis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
       </article>
     </section>
 
     <section class="sixth flex">
       <article class="sixth__art flex__art">
-        <h4>Sed ut perspiciatis unde omnis</h4>
+        <h3>Sed ut perspiciatis unde omnis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
       </article>
       <div class="sixth__img img--small">
@@ -298,7 +299,7 @@
             </svg>
       </div>
       <article class="flex__art">
-        <h4>Sed ut perspiciatis unde omnis</h4>
+        <h3>Sed ut perspiciatis unde omnis</h3>
         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
         <hr class="seventh__line">
         <p class="seventh__greyText">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore.</p>
@@ -339,7 +340,7 @@
       </svg>
       </div>
       <article class="flex__art">
-        <h4>Sed ut perspiciatis unde omnis</h4>
+        <h3>Sed ut perspiciatis unde omnis</h3>
         <p class="eighth__paragraf">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
         <article class="eighth__art">
           <div class="img--small img--small--extra">
@@ -516,9 +517,9 @@
             />
           </svg>
           </div>
-          <h4>Sed ut perspiciatis</h4>
+          <h3>Sed ut perspiciatis</h3>
           <p class="nineth__paragraf">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
-          <a href="/" class="nineth__link">Learn more</a>
+          <a href="/" class="nineth__link" title="Learn more about our services">Learn more</a>
         </article>
   
         <article class="nineth__art">
@@ -561,9 +562,9 @@
                 />
               </svg>
           </div>
-          <h4>Lorem ipsum dolor</h4>
+          <h3>Lorem ipsum dolor</h3>
           <p class="nineth__paragraf">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
-          <a href="/" class="nineth__link">Learn more</a>
+          <a href="/" class="nineth__link" title="Explore additional information">Learn more</a>
         </article>
   
         <article class="nineth__art">
@@ -606,9 +607,9 @@
                 />
           </svg>
           </div>
-          <h4>Nemo enim ipsam</h4>
+          <h3>Nemo enim ipsam</h3>
           <p class="nineth__paragraf">Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor.</p>
-          <a href="/" class="nineth__link">Learn more</a>
+          <a href="/" class="nineth__link" title="Learn more about our services">Learn more</a>
         </article>
       </article>
 
@@ -619,13 +620,13 @@
       <h2 class="tenth__middle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</h2>
       <article class="tenth__main">
         <article class="tenth__art">
-          <h4>Sed ut perspiciatis</h4>
+          <h3>Sed ut perspiciatis</h3>
           <p class="tenth__paragraf">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
   
-          <h4>Lorem ipsum dolor</h4>
+          <h3>Lorem ipsum dolor</h3>
           <p class="tenth__paragraf">Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   
-          <h4>Nemo enim ipsam</h4>
+          <h3>Nemo enim ipsam</h3>
           <p class="tenth__paragraf">Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
         </article>
         
@@ -704,7 +705,7 @@
           </svg>
           </div>
           <article class="eleventh__inside">
-            <h4>Sed ut perspiciatis</h4>
+            <h3>Sed ut perspiciatis</h3>
             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
           </article>
         </article>
@@ -743,7 +744,7 @@
           </svg>
           </div>
           <article class="eleventh__inside">
-            <h4>Lorem ipsum dolor</h4>
+            <h3>Lorem ipsum dolor</h3>
             <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </article>
         </article>
@@ -789,7 +790,7 @@
           </svg>
           </div>
           <article class="eleventh__inside">
-            <h4>Sed ut perspiciatis</h4>
+            <h3>Sed ut perspiciatis</h3>
             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
           </article>
         </article>
@@ -828,7 +829,7 @@
           </svg>
           </div>
           <article class="eleventh__inside">
-            <h4>Lorem ipsum dolor</h4>
+            <h3>Lorem ipsum dolor</h3>
             <p>Amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </article>
         </article>
@@ -867,7 +868,7 @@
           </svg>
           </div>
           <article class="eleventh__inside">
-            <h4>Nemo enim ipsam</h4>
+            <h3>Nemo enim ipsam</h3>
             <p>Consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
           </article>
         </article>
